fix scroll of anchor

--- a/_posts/300-news/150-excel-python.mdx
+++ b/_posts/300-news/150-excel-python.mdx
@@ -1,6 +1,6 @@
 ---
 global_id: fbb4790a
-title: Excel with Python A Powerful Combo for Data Analytics
+title: Excel with Python
 label: Tech
 excerpt: with the integration of Python into Excel, users can combine the strengths of both tools to unlock a new level of data analytics capabilities
 ---
