--- a/_posts/index.mdx
+++ b/_posts/index.mdx
@@ -13,7 +13,7 @@ Contentlayer is a content preprocessor that validates and transforms your conten
 
 ## Sources
 
-<div className="grid gap-6 md:grid-cols-2 -mt-4">
+<div className="grid gap-6 md:grid-cols-2 mt-4">
     <div>
         Contentlayer lets you choose the source for your content. Currently only local file source is officially supported.
         <ChevronLink label="See all guides" url="/docs/sources"/>
@@ -34,7 +34,7 @@ Contentlayer is a content preprocessor that validates and transforms your conten
 
 ## Environments
 
-<div className="grid gap-6 md:grid-cols-2 -mt-4">
+<div className="grid gap-6 md:grid-cols-2 mt-4">
     <div>
         Contentlayer supports a tight integration with Next.js. Other environment support is coming soon.
         <ChevronLink label="See all guides" url="/docs/environments"/>
