fix post left nav

--- a/_posts/200-react/100-tailwindcss.mdx
+++ b/_posts/200-react/100-tailwindcss.mdx
@@ -1,6 +1,7 @@
 ---
 global_id: fbb4790b
 title: tailwind with next.js
+nav_title: Tailwind
 label: frontend
 excerpt: When it comes to web development
 ---
