--- a/_posts/200-react/index.mdx
+++ b/_posts/200-react/index.mdx
@@ -1,7 +1,7 @@
 ---
-global_id: acc47cf6
-title: News First
-nav_title: News
+global_id: acc47cf7
+title: React.js start
+nav_title: React
 excerpt: Solving specific scenarios using Contentlayer.
 show_child_cards: true
 
