--- a/_posts/300-news/150-excel-python.mdx
+++ b/_posts/300-news/150-excel-python.mdx
@@ -1,6 +1,7 @@
 ---
-global_id: fbb4790a
+global_id: ae5
 title: Excel with Python
+nav_title: ExcelPy
 label: Tech
 excerpt: with the integration of Python into Excel, users can combine the strengths of both tools to unlock a new level of data analytics capabilities
 ---
