--- a/_posts/index.mdx
+++ b/_posts/index.mdx
@@ -1,7 +1,7 @@
 ---
 global_id: '' # Index page doesn't use a global ID
 title: AI Documentation
-nav_title: Documentation
+nav_title: Home
 excerpt: Contentlayer is a content preprocessor that validates and transforms your content into type-safe JSON you can easily import into your application.
 ---
 
