--- a/_posts/100-getting-started/index.mdx
+++ b/_posts/100-getting-started/index.mdx
@@ -1,6 +1,7 @@
 ---
 global_id: cddd76b7
 title: Getting Started
+nav_title: Getting Started
 excerpt: Get comfortable with the basics of Contentlayer by showing how we can quickly build a blog site using Next.js.
 ---
 
